test/positive/feature_staticmethoddeclaration.java

public class feature_staticmethoddeclaration {
  public feature_staticmethoddeclaration() {}
  public static int m() {
    return 42;
  }
}

