test/negative/feature_finalformals.java

public class feature_finalformals {
  public feature_finalformals() {}
  public int m(final int x) {
    return x;
  }
}


